tests/ui/view-types/tuple-structs.stderr
error[E0432]: unresolved import `std::view`
  --> $DIR/tuple-structs.rs:5:10
   |
LL | use std::view::view_type;
   |          ^^^^ could not find `view` in `std`

error[E0635]: unknown feature `view_type_macro`
  --> $DIR/tuple-structs.rs:1:24
   |
LL | #![feature(view_types, view_type_macro)]
   |                        ^^^^^^^^^^^^^^^

error[E0307]: invalid `self` parameter type: `&mut ()`
  --> $DIR/tuple-structs.rs:11:18
   |
LL |     fn foo(self: &mut view_type!(Pair.{ 0, 1 })) {}
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0307, E0432, E0635.
For more information about an error, try `rustc --explain E0307`.
